--- a/_layouts/archive_list.html
+++ b/_layouts/archive_list.html
@@ -20,6 +20,11 @@ layout: default
 			<div class="page-content">
 				{{ content }}
 			</div><!-- /.page-content -->
+            <div class="tiles">
+                {% for post in site.categories.dc_bot %}
+                {% include post-list.html %}
+                {% endfor %}
+            </div><!-- /.tiles -->
 		</div class="archive-wrap"><!-- /.archive-wrap -->
 	</div><!-- /.wrap -->
 	
