fix little problem

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -389,11 +389,11 @@ nav {
 }
 
 .teaser {
-	  display: flex;
-	  flex-direction: column;
-	  justify-content: center;
-	  height: 110px; 
-	  width: auto;
+	//   display: flex;
+	//   flex-direction: column;
+	  justify-content: space-around;
+	  height: 110%; 
+	  //width: 80%;
 }
 
 /*
