--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,7 @@
 <header id="masthead">
+  <script type="text/javascript"  
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  </script> 
   <div class="inner-wrap">
     <a href="{{ site.url }}/" class="site-title">{{ site.title }}</a>
     <nav role="navigation" class="menu top-menu">
