--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -388,6 +388,14 @@ nav {
   
 }
 
+// #masthead + nav ul{
+// 	display: flex;
+//    flex-direction: column;
+//    justify-content: center;
+//    height: 100%;
+
+// }
+
 .teaser {
 	//   display: flex;
 	//   flex-direction: column;
