--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -374,24 +374,46 @@ input[type="submit"] {
  *  </nav>
  */
 
-nav {
-  ul {
-    margin: 0;
-    padding: 0;
-
-	// display: flex;
-	// flex-direction: column;
-	// justify-content: center;
-	// height: 80%;
-  }
-  li {
-    list-style: none;
-  }
-  a {
-    text-decoration: none;
-  }
-  
+nav:not(#masthead + nav) {
+	ul {
+      margin: 0;
+      padding: 0;
+    }
+    li {
+      list-style: none;
+    }
+    a {
+      text-decoration: none;
+    }
 }
+  
+#masthead + nav ul li {
+    height: clamp(80px, 14vw, 150px);
+    min-height: 80px;
+    padding: 0;
+    margin: 0;
+
+	img {
+        height: clamp(80px, 14vw, 150px);
+        width: clamp(80px, 14vw, 150px);
+        margin: 0;
+    }
+  
+    .title {
+        margin-left: clamp(90px, 14.5vw, 170px);
+        font-size: clamp(1.5rem, 2.2vw,2rem);
+    }
+  
+    p {
+        margin-left: clamp(90px, 14.5vw, 170px);
+      	font-size: clamp(0.8rem, 1.8vw ,1.5rem);
+  	}
+}
+  
+  
+#masthead + nav ul {
+  padding-inline-start: 0;
+} 
 
 // #masthead + nav ul{
 // 	display: flex;
